2026-01-30T01:18:29Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21500868762 # 862
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-30
* notice: last 14d: unq all: 8 9
* notice: prev accum: outdated-unq outdated-all / unq all: 433 607 / 439 614
* notice: next accum: outdated-unq outdated-all / unq all: 433 607 / 441 616
* notice: prev exec diff / last date diff / accum: unq all: +2 +2 -0 -0 / +2 +2 -0 -0 / 2 2
* notice: removed / changed dates: [2026-01-12 2026-01-13] / [2026-01-27]

2026-01-29T01:19:01Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/21461878310 # 861
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2026-01-29
* notice: last 14d: unq all: 6 7
* notice: prev accum: outdated-unq outdated-all / unq all: 425 599 / 433 607
* notice: next accum: outdated-unq outdated-all / unq all: 433 607 / 439 614
* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -0 -0 / +1 +1 -0 -0 / 1 1
* notice: removed / changed dates: [2025-12-16 2025-12-17 2025-12-18 2025-12-19 2025-12-20 2025-12-21 2025-12-22 2025-12-23 2025-12-24 2025-12-25 2025-12-26 2025-12-27 2025-12-28 2025-12-29] / [2026-01-16 2026-01-18 2026-01-20 2026-01-23 2026-01-25]

2025-12-31T01:03:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/actions/actions/runs/20609440532 # 855
* notice: Stats Output Repository: https://github.com/andry81-stats/andry81--gh-stats/commits?branch=master&time_zone=utc&until=2025-12-31
* notice: last 14d: unq all: 8 8
* notice: prev accum: outdated-unq outdated-all / unq all: 425 599 / 433 607
* notice: next accum: outdated-unq outdated-all / unq all: 425 599 / 433 607
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [] / []

2025-12-30T01:01:59Z: