@@ -3,11 +3,6 @@
   "uniques": 8,
   "clones": [
     {
-      "timestamp": "2026-01-14T00:00:00Z",
-      "count": 0,
-      "uniques": 0
-    },
-    {
       "timestamp": "2026-01-15T00:00:00Z",
       "count": 0,
       "uniques": 0
@@ -71,6 +66,11 @@
       "timestamp": "2026-01-27T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2026-01-28T00:00:00Z",
+      "count": 0,
+      "uniques": 0
     }
   ]
 }
